@@ -1,4 +1,5 @@
 Changes towards version 0.3:
+- Fix endian problem in colormap transform code (bug #137) -Mika
 - Fix minor glitch in planet coarse scan (bug #238), from chmmravatar
 - Wav loader is now endian safe (bug #165) -Mika
 - Dialogue patch for Melnorme, fixing bug #335
